// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When registering a community admin As the new community admin should get the correct current user 1`] = `
Object {
  "currentUser": Object {
    "firstName": "New",
    "jobTitle": "Community Admin",
    "lastName": "User",
  },
}
`;

exports[`When registering a community admin the new user should show up in the DB 1`] = `
Object {
  "userById": Object {
    "firstName": "New",
    "jobTitle": "Community Admin",
    "lastName": "User",
  },
}
`;

exports[`When registering a community editor As the new community editor should get the correct current user 1`] = `
Object {
  "currentUser": Object {
    "firstName": "New",
    "jobTitle": "Community Editor",
    "lastName": "User",
  },
}
`;

exports[`When registering a community editor the new user should show up in the DB 1`] = `
Object {
  "userById": Object {
    "firstName": "New",
    "jobTitle": "Community Editor",
    "lastName": "User",
  },
}
`;

exports[`When registering a super admin As the new super admin should get the correct current user 1`] = `
Object {
  "currentUser": Object {
    "firstName": "New",
    "jobTitle": "Super Admin",
    "lastName": "User",
  },
}
`;

exports[`When registering a super admin the new user should show up in the DB 1`] = `
Object {
  "userById": Object {
    "firstName": "New",
    "jobTitle": "Super Admin",
    "lastName": "User",
  },
}
`;
